--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^1.4.5",
-    "crypto": "^1.0.1"
+    "multer": "1.4.4"
   }
 }
