--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "1.4.4"
+    "multer": "1.4.4",
+    "dotenv": "^10.0.0"
   }
 }
