--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "1.4.4",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "b2-sdk": "^1.0.0"
   }
 }
